add user related endpoints
