# app/backend/src/controllers/users/implementation/get-users.impl.ts
@@ -1,0 +1,6 @@
+import { User } from "../../../models/user.model";
+const getUsers = async (): Promise<any> => {
+  const users: any = await User.find();
+  return users;
+};
+export default getUsers;
